Removing some things from the config and switching to backbone

--- a/package.json
+++ b/package.json
@@ -30,11 +30,9 @@
     "colors": "0.6.x",
     "lodash": "2.4.x",
     "when": "2.7.*",
-    "pg": "2.9.x",
-    "backbone": "1.1.*",
+    "backbone": "~1.1.2",
     "migrate": "0.1.x",
     "stripe": "2.3.x",
-    "bookshelf": "git://github.com/airbrite/bookshelf",
     "winston": "~0.7.2",
     "urlsafe-base64": "0.0.2",
     "newrelic": "1.2.x",
